# box2d-wasm-experiment

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  emscripten-shell.html  index.html  main.cpp  main.data  main.js  main.wasm
assets/: index.html
src/: clock.h  const.h  deleter.h  event_data.h  game_object.h  game_state.h  main.cpp  utils.h
